hascomponent controller add devfile parsing
Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

--- a/config/samples/appstudio_v1alpha1_component.yaml
+++ b/config/samples/appstudio_v1alpha1_component.yaml
@@ -3,5 +3,10 @@ kind: Component
 metadata:
   name: component-sample
 spec:
-  # Add fields here
-  foo: bar
+  componentName: backend
+  application: myApp
+  replicas: 2
+  targetPort: 9999
+  source:
+    git:
+      url: https://github.com/devfile-samples/devfile-sample-java-springboot-basic
