Implement the HASApplication controller (#11)
* Add fields for HASApplication CR

Signed-off-by: John Collier <jcollier@redhat.com>

* Implement the HASApplication controller

Signed-off-by: John Collier <jcollier@redhat.com>

* Add tests for the controller

Signed-off-by: John Collier <jcollier@redhat.com>

* Format and add licenses

Signed-off-by: John Collier <jcollier@redhat.com>

* Fix build

Signed-off-by: John Collier <jcollier@redhat.com>

* Update docs for the operator

Signed-off-by: John Collier <jcollier@redhat.com>

* Update kcp.md doc

Signed-off-by: John Collier <jcollier@redhat.com>

* Update main.go

Co-authored-by: Maysun Faisal <31771087+maysunfaisal@users.noreply.github.com>

* Revert logger change

Signed-off-by: John Collier <jcollier@redhat.com>

* Update controllers/hasapplication_controller.go

Co-authored-by: Maysun Faisal <31771087+maysunfaisal@users.noreply.github.com>

* Address review comments

Signed-off-by: John Collier <jcollier@redhat.com>

* Address review comments

Signed-off-by: John Collier <jcollier@redhat.com>

* Update test

Signed-off-by: John Collier <jcollier@redhat.com>

Co-authored-by: Maysun Faisal <31771087+maysunfaisal@users.noreply.github.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,20 +20,18 @@ on:
     branches: [ main ]
 
 jobs:
-
-  build-imgs:
+  build-image:
     runs-on: ubuntu-20.04
     steps:
-      - name: Checkout application-service source code
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Docker Build & Push
-        uses: docker/build-push-action@v2.7.0
-        with:
-          username: ${{ secrets.QUAY_USERNAME }}
-          password: ${{ secrets.QUAY_PASSWORD }}
-          registry: quay.io
-          repository: redhat-appstudio/application-service
-          dockerfile: ./Dockerfile
-          tag_with_sha: true
+    - name: Checkout application-service source code
+      uses: actions/checkout@v2
+    - name: Docker Build & Push - application-service Operator Image
+      uses: docker/build-push-action@v1.1.0
+      with:
+        username: ${{ secrets.QUAY_USERNAME }}
+        password: ${{ secrets.QUAY_PASSWORD }}
+        registry: quay.io
+        repository: redhat-appstudio/application-service
+        dockerfile: Dockerfile
+        tags: next
+        tag_with_sha: true
