--- a/config/samples/appstudio_v1alpha1_component.yaml
+++ b/config/samples/appstudio_v1alpha1_component.yaml
@@ -7,6 +7,11 @@ spec:
   application: myApp
   replicas: 2
   targetPort: 9999
+  env:
+  - name: mjf
+    value: "1"
+  - name: mjf2
+    value: "2"
   source:
     git:
       url: https://github.com/devfile-samples/devfile-sample-java-springboot-basic
