integration of HASComponent and HASApplication
Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

--- a/config/samples/appstudio_v1alpha1_component.yaml
+++ b/config/samples/appstudio_v1alpha1_component.yaml
@@ -4,7 +4,7 @@ metadata:
   name: component-sample
 spec:
   componentName: backend
-  application: myApp
+  application: hasapplication-sample
   replicas: 2
   targetPort: 9999
   env:
