--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -97,6 +97,8 @@ jobs:
       - name: Run Go Tests
         run: |
           make test
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v2.1.0
   docker:
     name: Check docker build
     runs-on: ubuntu-latest
