--- a/config/crd/patches/cainjection_in_haspushes.yaml
+++ b/config/crd/patches/cainjection_in_haspushes.yaml
@@ -4,4 +4,4 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/$(CERTIFICATE_NAME)
-  name: haspushes.appstudio.redhat.com
+  name: pushes.appstudio.redhat.com
