--- a/bundle/manifests/appstudio.redhat.com_components.yaml
+++ b/bundle/manifests/appstudio.redhat.com_components.yaml
@@ -1,25 +1,23 @@
-
----
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
-  name: pushes.appstudio.redhat.com
+  name: components.appstudio.redhat.com
 spec:
   group: appstudio.redhat.com
   names:
-    kind: Push
-    listKind: PushList
-    plural: pushes
-    singular: push
+    kind: Component
+    listKind: ComponentList
+    plural: components
+    singular: component
   scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: Push is the Schema for the pushes API
+        description: Component is the Schema for the components API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -34,15 +32,15 @@ spec:
           metadata:
             type: object
           spec:
-            description: PushSpec defines the desired state of Push
+            description: ComponentSpec defines the desired state of Component
             properties:
               foo:
-                description: Foo is an example field of Push. Edit push_types.go
+                description: Foo is an example field of Component. Edit component_types.go
                   to remove/update
                 type: string
             type: object
           status:
-            description: PushStatus defines the observed state of Push
+            description: ComponentStatus defines the observed state of Component
             type: object
         type: object
     served: true
