--- a/bundle/manifests/appstudio.redhat.com_pushes.yaml
+++ b/bundle/manifests/appstudio.redhat.com_pushes.yaml
@@ -1,5 +1,3 @@
-
----
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -37,8 +35,8 @@ spec:
             description: PushSpec defines the desired state of Push
             properties:
               foo:
-                description: Foo is an example field of Push. Edit push_types.go
-                  to remove/update
+                description: Foo is an example field of Push. Edit push_types.go to
+                  remove/update
                 type: string
             type: object
           status:
