--- a/config/crd/bases/appstudio.redhat.com_pushes.yaml
+++ b/config/crd/bases/appstudio.redhat.com_pushes.yaml
@@ -1,23 +1,25 @@
+
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
-  name: haspushes.appstudio.redhat.com
+  name: pushes.appstudio.redhat.com
 spec:
   group: appstudio.redhat.com
   names:
-    kind: HASPush
-    listKind: HASPushList
-    plural: haspushes
-    singular: haspush
+    kind: Push
+    listKind: PushList
+    plural: pushes
+    singular: push
   scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: HASPush is the Schema for the haspushes API
+        description: Push is the Schema for the pushes API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -32,15 +34,15 @@ spec:
           metadata:
             type: object
           spec:
-            description: HASPushSpec defines the desired state of HASPush
+            description: PushSpec defines the desired state of Push
             properties:
               foo:
-                description: Foo is an example field of HASPush. Edit haspush_types.go
-                  to remove/update
+                description: Foo is an example field of Push. Edit push_types.go to
+                  remove/update
                 type: string
             type: object
           status:
-            description: HASPushStatus defines the observed state of HASPush
+            description: PushStatus defines the observed state of Push
             type: object
         type: object
     served: true
