--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -2,27 +2,27 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
-- bases/appstudio.redhat.com_hasapplications.yaml
-- bases/appstudio.redhat.com_hascomponents.yaml
-- bases/appstudio.redhat.com_haspushes.yaml
-- bases/appstudio.redhat.com_hascomponentdetectionqueries.yaml
+- bases/appstudio.redhat.com_applications.yaml
+- bases/appstudio.redhat.com_components.yaml
+- bases/appstudio.redhat.com_pushes.yaml
+- bases/appstudio.redhat.com_componentdetectionqueries.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
-#- patches/webhook_in_hasapplications.yaml
-#- patches/webhook_in_hascomponents.yaml
-#- patches/webhook_in_haspushes.yaml
-#- patches/webhook_in_hascomponentdetectionqueries.yaml
+#- patches/webhook_in_applications.yaml
+#- patches/webhook_in_components.yaml
+#- patches/webhook_in_pushes.yaml
+#- patches/webhook_in_componentdetectionqueries.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
-#- patches/cainjection_in_hasapplications.yaml
-#- patches/cainjection_in_hascomponents.yaml
-#- patches/cainjection_in_haspushes.yaml
-#- patches/cainjection_in_hascomponentdetectionqueries.yaml
+#- patches/cainjection_in_applications.yaml
+#- patches/cainjection_in_components.yaml
+#- patches/cainjection_in_pushes.yaml
+#- patches/cainjection_in_componentdetectionqueries.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
