--- a/config/crd/patches/webhook_in_hasapplications.yaml
+++ b/config/crd/patches/webhook_in_hasapplications.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: hasapplications.appstudio.redhat.com
+  name: applications.appstudio.redhat.com
 spec:
   conversion:
     strategy: Webhook
