--- a/config/crd/patches/webhook_in_hascomponents.yaml
+++ b/config/crd/patches/webhook_in_hascomponents.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: hascomponents.appstudio.redhat.com
+  name: components.appstudio.redhat.com
 spec:
   conversion:
     strategy: Webhook
