--- a/config/crd/patches/webhook_in_haspushes.yaml
+++ b/config/crd/patches/webhook_in_haspushes.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: haspushes.appstudio.redhat.com
+  name: pushes.appstudio.redhat.com
 spec:
   conversion:
     strategy: Webhook
