--- a/config/rbac/hasapplication_editor_role.yaml
+++ b/config/rbac/hasapplication_editor_role.yaml
@@ -1,13 +1,13 @@
-# permissions for end users to edit hasapplications.
+# permissions for end users to edit applications.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: hasapplication-editor-role
+  name: application-editor-role
 rules:
 - apiGroups:
   - appstudio.redhat.com
   resources:
-  - hasapplications
+  - applications
   verbs:
   - create
   - delete
@@ -19,6 +19,6 @@ rules:
 - apiGroups:
   - appstudio.redhat.com
   resources:
-  - hasapplications/status
+  - applications/status
   verbs:
   - get
