--- a/config/rbac/hasapplication_viewer_role.yaml
+++ b/config/rbac/hasapplication_viewer_role.yaml
@@ -1,13 +1,13 @@
-# permissions for end users to view hasapplications.
+# permissions for end users to view applications.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: hasapplication-viewer-role
+  name: application-viewer-role
 rules:
 - apiGroups:
   - appstudio.redhat.com
   resources:
-  - hasapplications
+  - applications
   verbs:
   - get
   - list
@@ -15,6 +15,6 @@ rules:
 - apiGroups:
   - appstudio.redhat.com
   resources:
-  - hasapplications/status
+  - applications/status
   verbs:
   - get
