--- a/config/samples/appstudio_v1alpha1_componentdetectionquery.yaml
+++ b/config/samples/appstudio_v1alpha1_componentdetectionquery.yaml
@@ -1,7 +1,7 @@
 apiVersion: appstudio.redhat.com/v1alpha1
-kind: HASPush
+kind: ComponentDetectionQuery
 metadata:
-  name: haspush-sample
+  name: componentdetectionquery-sample
 spec:
   # Add fields here
   foo: bar
