--- a/config/samples/appstudio_v1alpha1_push.yaml
+++ b/config/samples/appstudio_v1alpha1_push.yaml
@@ -1,7 +1,7 @@
 apiVersion: appstudio.redhat.com/v1alpha1
-kind: HASComponentDetectionQuery
+kind: Push
 metadata:
-  name: hascomponentdetectionquery-sample
+  name: push-sample
 spec:
   # Add fields here
   foo: bar
