--- a/bundle/manifests/appstudio.redhat.com_applications.yaml
+++ b/bundle/manifests/appstudio.redhat.com_applications.yaml
@@ -4,23 +4,24 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
-  name: hasapplications.appstudio.redhat.com
+  name: applications.appstudio.redhat.com
 spec:
   group: appstudio.redhat.com
   names:
-    kind: HASApplication
-    listKind: HASApplicationList
-    plural: hasapplications
+    kind: Application
+    listKind: ApplicationList
+    plural: applications
     shortNames:
     - hasapp
     - ha
-    singular: hasapplication
+    - app
+    singular: application
   scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: HASApplication is the Schema for the hasapplications API
+        description: Application is the Schema for the applications API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -35,7 +36,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: HASApplicationSpec defines the desired state of HASApplication
+            description: ApplicationSpec defines the desired state of Application
             properties:
               appModelRepository:
                 description: AppModelRepository refers to the git repository that
@@ -85,7 +86,7 @@ spec:
                 type: object
             type: object
           status:
-            description: HASApplicationStatus defines the observed state of HASApplication
+            description: ApplicationStatus defines the observed state of Application
             properties:
               conditions:
                 description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
@@ -161,7 +162,7 @@ spec:
                 type: array
               devfile:
                 description: Devfile corresponds to the devfile representation of
-                  the HASApplication resource
+                  the Application resource
                 type: string
             required:
             - conditions
