rebase and run Makefile 1
Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

--- a/bundle/manifests/application-service.clusterserviceversion.yaml
+++ b/bundle/manifests/application-service.clusterserviceversion.yaml
@@ -19,10 +19,43 @@ metadata:
           "apiVersion": "appstudio.redhat.com/v1alpha1",
           "kind": "Component",
           "metadata": {
-            "name": "component-sample"
+            "name": "hascomponent-sample-12345"
           },
           "spec": {
-            "foo": "bar"
+            "application": "hasapplication-sample-12345",
+            "componentName": "backend",
+            "env": [
+              {
+                "name": "FOO",
+                "value": "foo1"
+              },
+              {
+                "name": "BAR",
+                "value": "bar1"
+              }
+            ],
+            "replicas": 1,
+            "resources": {
+              "limits": {
+                "cpu": "2",
+                "ephemeral-storage": "500Mi",
+                "memory": "500Mi",
+                "storage": "400Mi"
+              },
+              "requests": {
+                "cpu": "700m",
+                "ephemeral-storage": "400Mi",
+                "memory": "400Mi",
+                "storage": "200Mi"
+              }
+            },
+            "route": "route111",
+            "source": {
+              "git": {
+                "url": "https://github.com/devfile-samples/devfile-sample-java-springboot-basic"
+              }
+            },
+            "targetPort": 1111
           }
         },
         {
@@ -234,7 +267,7 @@ spec:
                 - --leader-elect
                 command:
                 - /manager
-                image: quay.io/redhat-appstudio/application-service:next
+                image: maysunfaisal/hasoperator:latest
                 imagePullPolicy: Always
                 livenessProbe:
                   httpGet:
