--- a/bundle/manifests/appstudio.redhat.com_components.yaml
+++ b/bundle/manifests/appstudio.redhat.com_components.yaml
@@ -11,6 +11,10 @@ spec:
     kind: Component
     listKind: ComponentList
     plural: components
+    shortNames:
+    - hascmp
+    - hc
+    - comp
     singular: component
   scope: Namespaced
   versions:
@@ -220,7 +224,7 @@ spec:
             - source
             type: object
           status:
-            description: HASComponentStatus defines the observed state of HASComponent
+            description: ComponentStatus defines the observed state of Component
             properties:
               conditions:
                 description: Condition about the HAS Component CR
