--- a/config/samples/appstudio_v1alpha1_component.yaml
+++ b/config/samples/appstudio_v1alpha1_component.yaml
@@ -1,29 +1,10 @@
 apiVersion: appstudio.redhat.com/v1alpha1
 kind: Component
 metadata:
-  name: hascomponent-sample-12345
+  name: component-sample
 spec:
   componentName: backend
-  application: hasapplication-sample-12345
-  replicas: 1
-  targetPort: 1111
-  route: route111
-  resources:
-    limits:
-      memory: "500Mi"
-      cpu: "2"
-      storage: "400Mi"
-      ephemeral-storage: "500Mi"
-    requests:
-      memory: "400Mi"
-      cpu: "700m"
-      storage: "200Mi"
-      ephemeral-storage: "400Mi"
-  env:
-  - name: FOO
-    value: "foo1"
-  - name: BAR
-    value: "bar1"
+  application: application-sample
   source:
     git:
       url: https://github.com/devfile-samples/devfile-sample-java-springboot-basic
