Onboard Component Controller for App Service (#18)
* hascomponent controller add devfile parsing

Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

* Add env to hascmp controller

Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

* integration of HASComponent and HASApplication

Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

* Update controller  logic and add controller test

Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

* rebase and run Makefile 1

Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

* rebase and make

Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

* Add test and update license

Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

* Add component util func tests

Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

* Apply PR Feedback and cleanup

Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

* remove redundant if block

Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

--- a/bundle/manifests/application-service.clusterserviceversion.yaml
+++ b/bundle/manifests/application-service.clusterserviceversion.yaml
@@ -22,7 +22,13 @@ metadata:
             "name": "component-sample"
           },
           "spec": {
-            "foo": "bar"
+            "application": "application-sample",
+            "componentName": "backend",
+            "source": {
+              "git": {
+                "url": "https://github.com/devfile-samples/devfile-sample-java-springboot-basic"
+              }
+            }
           }
         },
         {
