--- a/config/rbac/hascomponent_editor_role.yaml
+++ b/config/rbac/hascomponent_editor_role.yaml
@@ -3,6 +3,9 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: component-editor-role
+  labels:
+      rbac.authorization.k8s.io/aggregate-to-edit: 'true'
+      rbac.authorization.k8s.io/aggregate-to-admin: 'true'
 rules:
 - apiGroups:
   - appstudio.redhat.com
