--- a/config/rbac/hasservicedetectionquery_viewer_role.yaml
+++ b/config/rbac/hasservicedetectionquery_viewer_role.yaml
@@ -3,6 +3,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: componentdetectionquery-viewer-role
+  labels:
+      rbac.authorization.k8s.io/aggregate-to-view: 'true'
 rules:
 - apiGroups:
   - appstudio.redhat.com
