--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -9,6 +9,17 @@ resources:
 - role_binding.yaml
 - leader_election_role.yaml
 - leader_election_role_binding.yaml
+
+# Aggegating roles which are otherwise done by OLM
+- hasapplication_editor_role.yaml
+- hasapplication_viewer_role.yaml
+- hascomponent_editor_role.yaml
+- hascomponent_viewer_role.yaml
+- haspush_editor_role.yaml
+- haspush_viewer_role.yaml
+- hasservicedetectionquery_editor_role.yaml
+- hasservicedetectionquery_viewer_role.yaml
+
 # Comment the following 4 lines if you want to disable
 # the auth proxy (https://github.com/brancz/kube-rbac-proxy)
 # which protects your /metrics endpoint.
