--- a/bundle/manifests/appstudio.redhat.com_components.yaml
+++ b/bundle/manifests/appstudio.redhat.com_components.yaml
@@ -2,10 +2,21 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
+    cert-manager.io/inject-ca-from: application-service-system/application-service-serving-cert
     controller-gen.kubebuilder.io/version: v0.6.1
   creationTimestamp: null
   name: components.appstudio.redhat.com
 spec:
+  conversion:
+    strategy: Webhook
+    webhook:
+      clientConfig:
+        service:
+          name: application-service-webhook-service
+          namespace: application-service-system
+          path: /convert
+      conversionReviewVersions:
+      - v1
   group: appstudio.redhat.com
   names:
     kind: Component
