--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -16,5 +16,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: maysunfaisal/hasoperator
-  newTag: latest
+  newName: quay.io/redhat-appstudio/application-service
+  newTag: next
