first pass of comp detection query
Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

--- a/bundle/manifests/application-service.clusterserviceversion.yaml
+++ b/bundle/manifests/application-service.clusterserviceversion.yaml
@@ -240,6 +240,19 @@ spec:
                 - --leader-elect
                 command:
                 - /manager
+                env:
+                - name: GITHUB_ORG
+                  valueFrom:
+                    configMapKeyRef:
+                      key: GITHUB_ORG
+                      name: application-service-github-config
+                      optional: true
+                - name: GITHUB_AUTH_TOKEN
+                  valueFrom:
+                    secretKeyRef:
+                      key: token
+                      name: has-github-token
+                      optional: true
                 image: quay.io/redhat-appstudio/application-service:next
                 imagePullPolicy: Always
                 livenessProbe:
