--- a/config/samples/componentdetectionquery/componentdetectionquery-basic.yaml
+++ b/config/samples/componentdetectionquery/componentdetectionquery-basic.yaml
@@ -4,5 +4,8 @@ metadata:
   name: componentdetectionquery-sample
 spec:
   git:
-    url: https://github.com/devfile-samples/devfile-sample-java-springboot-basic
+    # url: https://github.com/devfile-samples/devfile-sample-java-springboot-basic
+    # url: https://github.com/maysunfaisal/hiddendevfile
+    # url: https://github.com/maysunfaisal/hiddendirdevfile
+    url: https://github.com/maysunfaisal/hiddendirhiddendevfile
     # devfileUrl: https://raw.githubusercontent.com/devfile-samples/devfile-sample-java-springboot-basic/main/devfile.yaml
