--- a/config/samples/componentdetectionquery/componentdetectionquery-multicomp.yaml
+++ b/config/samples/componentdetectionquery/componentdetectionquery-multicomp.yaml
@@ -5,5 +5,5 @@ metadata:
 spec:
   isMultiComponent: true
   git:
-    url: https://github.com/maysunfaisal/multi-components
+    url: https://github.com/octocat/Hello-World
     
