Store containerImage in component status
Signed-off-by: John Collier <jcollier@redhat.com>

--- a/config/crd/bases/appstudio.redhat.com_components.yaml
+++ b/config/crd/bases/appstudio.redhat.com_components.yaml
@@ -308,6 +308,10 @@ spec:
                   - type
                   type: object
                 type: array
+              containerImage:
+                description: ContainerImage stores the associated built container
+                  image for the component
+                type: string
               devfile:
                 description: The devfile model for the Component CR
                 type: string
