--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -83,6 +83,9 @@ jobs:
             git --no-pager diff
             exit 1
           fi
+      - uses: dominikh/staticcheck-action@v1.1.0
+        with:
+          version: "2021.1.2"
       - name: Check manifests
         run: |
           # Note: fmt is necessary after generate since generated sources will
