--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -86,6 +86,7 @@ jobs:
       - uses: dominikh/staticcheck-action@v1.1.0
         with:
           version: "2021.1.2"
+          install-go: false
       - name: Check manifests
         run: |
           # Note: fmt is necessary after generate since generated sources will
