--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Format operator binary",
+            "label": "Format operator code",
             "command": "make fmt",
             "options": {
                 "env": {
