--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -11,14 +11,12 @@ resources:
 - leader_election_role_binding.yaml
 
 # Aggegating roles which are otherwise done by OLM
-- hasapplication_editor_role.yaml
-- hasapplication_viewer_role.yaml
-- hascomponent_editor_role.yaml
-- hascomponent_viewer_role.yaml
-- haspush_editor_role.yaml
-- haspush_viewer_role.yaml
-- hasservicedetectionquery_editor_role.yaml
-- hasservicedetectionquery_viewer_role.yaml
+- application_editor_role.yaml
+- application_viewer_role.yaml
+- component_editor_role.yaml
+- component_viewer_role.yaml
+- componentdetectionquery_editor_role.yaml
+- componentdetectionquery_viewer_role.yaml
 
 # Comment the following 4 lines if you want to disable
 # the auth proxy (https://github.com/brancz/kube-rbac-proxy)
