--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -27,3 +27,6 @@ resources:
 - auth_proxy_role.yaml
 - auth_proxy_role_binding.yaml
 - auth_proxy_client_clusterrole.yaml
+
+## Tekton Builds
+- role_build.yaml
