Use secret from operator deployment namespace.
Signed-off-by: Oleksandr Andriienko <oandriie@redhat.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,9 @@
             "mode": "auto",
             "program": "${workspaceFolder}/main.go",
             "cwd": "${workspaceFolder}",
+            "env": {
+                "DEBUG": "true"
+            }
         }
     ]
 }
