--- a/config/rbac/role_binding.yaml
+++ b/config/rbac/role_binding.yaml
@@ -14,7 +14,7 @@ subjects:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: manager-rolebinding
+  name: manager-rolebinding-build
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -23,4 +23,3 @@ subjects:
 - kind: ServiceAccount
   name: controller-manager
   namespace: system
-  
