--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -10,15 +10,15 @@ resources:
 patchesStrategicMerge:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
-- patches/webhook_in_applications.yaml
-- patches/webhook_in_components.yaml
+- patches/webhook_in_applications.yaml # Comment for KCP
+- patches/webhook_in_components.yaml # Comment for KCP
 # - patches/webhook_in_componentdetectionqueries.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
-- patches/cainjection_in_applications.yaml
-- patches/cainjection_in_components.yaml
+- patches/cainjection_in_applications.yaml # Comment for KCP
+- patches/cainjection_in_components.yaml # Comment for KCP
 # - patches/cainjection_in_componentdetectionqueries.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
