--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -9,7 +9,10 @@
 #   Red Hat, Inc. - initial API and implementation
 
 name: Code Coverage Report
-on: [push]
+on:
+  push:
+    branches:
+      - main
 jobs:
   build-and-deploy:
     runs-on: ubuntu-20.04
